--- a/src/main/resources/templates/customer/create.html
+++ b/src/main/resources/templates/customer/create.html
@@ -1,10 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Create customer</title>
 </head>
 <body>
+<h1>Create customer</h1>
+<p><a href="/customers">All customers</a></p>
+<th:block th:if="${message}"><p th:text="${message}"></p></th:block>
 
+<form th:action="@{/customers/create}" th:object="${customer}" method="post">
+    <table>
+        <tr>
+            <td>Name: </td>
+            <td><input type="text" th:field="*{name}"/></td>
+        </tr>
+        <tr>
+            <td>Address: </td>
+            <td><input type="text" th:field="*{address}"/></td>
+        </tr>
+        <tr>
+            <td>Email: </td>
+            <td><input type="text" th:field="*{email}"/></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><input type="submit" value="Create customer"></td>
+        </tr>
+    </table>
+</form>
 </body>
 </html>
