--- a/src/main/resources/templates/customer/list.html
+++ b/src/main/resources/templates/customer/list.html
@@ -12,6 +12,7 @@
         <th>Name</th>
         <th>Address</th>
         <th>Email</th>
+        <th>Province</th>
         <th>Update</th>
         <th>Delete</th>
     </tr>
@@ -20,10 +21,17 @@
             <td th:text="${customer.name}"></td>
             <td th:text="${customer.address}"></td>
             <td th:text="${customer.email}"></td>
+            <td th:text="${customer.getProvince() != null ? customer.getProvince().getName() : 'N/A'}"></td>
             <td><a th:href="@{/customers/update/__${customer.id}__ }">Update</a></td>
             <td><a th:href="@{/customers/delete/__${customer.id}__ }">Delete</a></td>
         </tr>
     </th:block>
 </table>
+<div>
+    <a th:if="${customers.hasPrevious()}" th:href="@{'/customers'(page=${customers.number - 1})}">Previous</a>
+    <span th:text="${customers.number + 1}"></span>/
+    <span th:text="${customers.totalPages}"></span>
+    <a th:if="${customers.hasNext()}" th:href="@{'/customers'(page=${customers.number + 1})}">Next</a>
+</div>
 </body>
 </html>
