--- a/src/main/resources/templates/customer/update.html
+++ b/src/main/resources/templates/customer/update.html
@@ -28,6 +28,14 @@
             <td><input type="text" th:field="*{email}"/></td>
         </tr>
         <tr>
+            <td> <label for="province">Province</label></td>
+            <td>
+                <select id="province" th:field="*{province}">
+                    <option th:each="p : ${provinces}" th:value="${p.id}" th:text="${p.name}"></option>
+                </select>
+            </td>
+        </tr>
+        <tr>
             <td></td>
             <td><input type="submit" value="Update customer"></td>
         </tr>
