--- a/src/main/resources/templates/provinces/create.html
+++ b/src/main/resources/templates/provinces/create.html
@@ -5,6 +5,24 @@
     <title>Title</title>
 </head>
 <body>
+<h1>Create province</h1>
+<p><a href="/provinces">All Provinces</a></p>
+<th:block th:if="${message}">
+    <p th:text="${message}"></p>
+</th:block>
 
+<form th:action="@{/provinces/create}" th:object="${province}" method="post">
+    <table>
+        <tr>
+            <td>Name: </td>
+            <td><input type="text" th:field="*{name}"/></td>
+        </tr>
+
+        <tr>
+            <td></td>
+            <td><input type="submit" value="Create province"></td>
+        </tr>
+    </table>
+</form>
 </body>
 </html>
