--- a/src/main/resources/templates/provinces/delete.html
+++ b/src/main/resources/templates/provinces/delete.html
@@ -5,6 +5,27 @@
     <title>Title</title>
 </head>
 <body>
-
+<h1>Delete province</h1>
+<h2>Are you sure?</h2>
+<p>
+    <a href="/provinces">Province list</a>
+</p>
+<form th:action="@{/provinces/delete}" th:object="${province}" method="post">
+<!--    <input th:type="hidden" name="id" th:field="*{id}">-->
+    <table>
+        <tr>
+            <td>ID:</td>
+            <td th:text="${province.id}"></td>
+        </tr>
+        <tr>
+            <td>Name:</td>
+            <td th:text="${province.name}"></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td><input type="submit" value="Delete province"></td>
+        </tr>
+    </table>
+</form>
 </body>
 </html>
