--- a/src/main/resources/templates/provinces/list.html
+++ b/src/main/resources/templates/provinces/list.html
@@ -5,7 +5,7 @@
     <title>All Provinces</title>
 </head>
 <body>
-<!--<a href="/provinces/create">Create new province</a>-->
+<a href="/provinces/create">Create new province</a>
 <p><a href="/customers">Back to customer list</a></p>
 <h1>All Provinces</h1>
 <table border="1">
@@ -13,14 +13,14 @@
         <th>ID</th>
         <th>Name</th>
 <!--        <th>Update</th>-->
-<!--        <th>Delete</th>-->
+        <th>Delete</th>
     </tr>
     <th:block th:each="province : ${provinces}">
         <tr>
             <td th:text="${province.id}"></td>
             <td th:text="${province.name}"></td>
 <!--            <td><a th:href="@{/provinces/update/__${province.id}__ }">Update</a></td>-->
-<!--            <td><a th:href="@{/provinces/delete/__${province.id}__ }">Delete</a></td>-->
+            <td><a th:href="@{/provinces/delete/__${province.id}__ }">Delete</a></td>
         </tr>
     </th:block>
 </table>
