--- a/src/main/resources/templates/provinces/list.html
+++ b/src/main/resources/templates/provinces/list.html
@@ -12,8 +12,7 @@
     <tr>
         <th>ID</th>
         <th>Name</th>
-        <th>Count1</th>
-        <th>Count2</th>
+        <th>Customers per Province</th>
 <!--        <th>Update</th>-->
         <th>Delete</th>
     </tr>
@@ -22,7 +21,6 @@
             <td th:text="${province.id}"></td>
             <td th:text="${province.name}"></td>
             <td th:text="${province.count}"></td>
-            <td th:text="${pStat.count}"></td>
 <!--            <td><a th:href="@{/provinces/update/__${province.id}__ }">Update</a></td>-->
             <td><a th:href="@{/provinces/delete/__${province.id}__ }">Delete</a></td>
         </tr>
