--- a/src/main/resources/templates/error_404.html
+++ b/src/main/resources/templates/error_404.html
@@ -2,9 +2,34 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Error</title>
+    <title>404 Not Found</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 50px;
+        }
+        h1 {
+            font-size: 2em;
+            color: #ff0000;
+        }
+        p {
+            font-size: 1.2em;
+        }
+        a {
+            color: #007BFF;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-<h1>Error 404 - File not found</h1>
+<h1>404 - Not Found</h1>
+<p>The page you are looking for does not exist.</p>
+<p>
+    <a href="/promo">Go back to Promo List</a>
+</p>
 </body>
 </html>
