--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -16,23 +16,32 @@
     <input type="hidden" th:field="*{id}"/>
     <table>
         <tr>
-            <td>Title: </td>
+            <td>Title:</td>
             <td><input type="text" th:field="*{title}"/></td>
         </tr>
         <tr>
-            <td>Start Date (dd/mm/yyyy): </td>
-            <td><input type="text" th:field="*{startDate}" placeholder="DD/MM/YYYY" required/></td>
+            <td>Start Date (dd/mm/yyyy):</td>
+            <td><input type="date" th:field="*{startDate}" required/>
+                <div th:if="${param.errorStartDate}" style="color:red;">
+                    <span th:text="${param.errorStartDate}">Error message</span>
+                </div>
+            </td>
+
         </tr>
         <tr>
-            <td>End Date (dd/mm/yyyy): </td>
-            <td><input type="text" th:field="*{endDate}" placeholder="DD/MM/YYYY" required/></td>
+            <td>End Date (dd/mm/yyyy):</td>
+            <td><input type="date" th:field="*{endDate}" required />
+                <div th:if="${param.errorEndDate}" style="color:red;">
+                    <span th:text="${param.errorEndDate}">Error message</span>
+                </div>
+            </td>
         </tr>
         <tr>
-            <td>Discount: </td>
+            <td>Discount:</td>
             <td><input type="number" th:field="*{discount}" required min="10000"/></td>
         </tr>
         <tr>
-            <td>Details: </td>
+            <td>Details:</td>
             <td><input type="text" th:field="*{description}"/></td>
         </tr>
         <tr>
