--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -14,6 +14,11 @@
     <button type="submit">Search</button>
   </form>
 </div>
+<!-- Display message if no results -->
+<div th:if="${message}">
+  <p><a href="/promo">All Promotions</a></p>
+  <p style="color:red;" th:text="${message}"></p>
+</div>
 <!--List-->
 <table border="1">
   <tr>
