--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -2,49 +2,55 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Create Promo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-<h1>Create a Promo</h1>
-<p><a href="/promo">All Promotions</a></p>
-<p th:text="${message}"></p>
-<form th:action="@{/promo/create}" th:object="${promo}" method="post">
-    <table>
-        <tr>
-            <td>Title: </td>
-            <td><input type="text" th:field="*{title}" required placeholder="Enter title"/></td>
-        </tr>
-        <tr>
-            <td>Start Date: </td>
-            <td>
-                <input type="date" th:field="*{startDate}" required />
-                <div th:if="${errorStartDate}" style="color:red;">
-                    <span th:text="${errorStartDate}">Error message</span>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td>End Date: </td>
-            <td>
-                <input type="date" th:field="*{endDate}" required />
-                <div th:if="${errorEndDate}" style="color:red;">
-                    <span th:text="${errorEndDate}">Error message</span>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td>Discount: </td>
-            <td><input type="number" th:field="*{discount}" required min="10000"/></td>
-        </tr>
-        <tr>
-            <td>Details: </td>
-            <td><input type="text" th:field="*{description}"/></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td><input type="submit" value="Create Promo"></td>
-        </tr>
-    </table>
-</form>
+<body class="container mt-4">
+<div class="row">
+    <div class="col-md-8 mx-auto">
+        <h1 class="mb-3">Create a Promo</h1>
+
+
+        <div th:if="${message}" class="alert alert-success mb-3" th:text="${message}"></div>
+
+        <form th:action="@{/promo/create}" th:object="${promo}" method="post" class="card p-4">
+            <div class="mb-3">
+                <label class="form-label">Title</label>
+                <input type="text" th:field="*{title}" class="form-control" required placeholder="Enter title"/>
+            </div>
+
+            <div class="mb-3">
+                <label class="form-label">Start Date</label>
+                <input type="date" th:field="*{startDate}" class="form-control" required />
+                <div th:if="${errorStartDate}" class="text-danger mt-1" th:text="${errorStartDate}"></div>
+            </div>
+
+            <div class="mb-3">
+                <label class="form-label">End Date</label>
+                <input type="date" th:field="*{endDate}" class="form-control" required />
+                <div th:if="${errorEndDate}" class="text-danger mt-1" th:text="${errorEndDate}"></div>
+            </div>
+
+            <div class="mb-3">
+                <label class="form-label">Discount</label>
+                <input type="number" th:field="*{discount}" class="form-control" required min="10000"/>
+            </div>
+
+            <div class="mb-3">
+                <label class="form-label">Details</label>
+                <textarea th:field="*{description}" class="form-control" rows="3"></textarea>
+            </div>
+
+            <div class="text-end align-items-center flex">
+                <button type="submit" class="btn btn-primary">Create</button>
+                <a href="/promo" class="btn btn-outline-secondary mb-4">Back</a>
+            </div>
+
+        </form>
+    </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
