--- a/src/main/resources/templates/delete.html
+++ b/src/main/resources/templates/delete.html
@@ -2,39 +2,45 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Delete Promo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-<h1>Delete Promo</h1>
-<p>
-    <a href="/promo">Promo list</a>
-</p>
+<body class="container mt-4">
+<h1 class="mb-3">Delete Promo</h1>
 <p>Are you sure you want to delete this promo?</p>
-<table>
+
+<table class="table">
     <tr>
-        <td>Title:</td>
+        <td><strong>Title:</strong></td>
         <td th:text="${promo.title}"></td>
     </tr>
     <tr>
-        <td>Start Date:</td>
+        <td><strong>Start Date:</strong></td>
         <td th:text="${promo.startDate}"></td>
     </tr>
     <tr>
-        <td>End Date:</td>
+        <td><strong>End Date:</strong></td>
         <td th:text="${promo.endDate}"></td>
     </tr>
     <tr>
-        <td>Discount:</td>
+        <td><strong>Discount:</strong></td>
         <td th:text="${promo.discount}"></td>
     </tr>
     <tr>
-        <td>Details:</td>
+        <td><strong>Details:</strong></td>
         <td th:text="${promo.description}"></td>
     </tr>
 </table>
-<form th:action="@{/promo/delete}" th:object="${promo}" method="post"> <!-- Sử dụng POST -->
+
+<form th:action="@{/promo/delete}" th:object="${promo}" method="post">
     <input type="hidden" th:field="*{id}"/>
-    <input type="submit" value="Delete Promo"/>
+    <div class="text-end ">
+        <button type="submit" class="btn btn-danger">Delete Promo</button>
+        <a href="/promo" class="btn btn-outline-secondary mb-4 ">Cancel</a>
+    </div>
 </form>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
