--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -20,8 +20,8 @@
 
 <!-- Message -->
 <div th:if="${message}" class="mb-3">
-  <a href="/promo" class="text-decoration-none">All Promotions</a>
-  <p class="text-danger" th:text="${message}"></p>
+  <span class="text-danger" th:text="${message}"></span>
+  <a href="/promo" class="text-decoration-none">Reload?</a>
 </div>
 
 <!-- Table -->
